access protected endpoint using token not working