@@ -4,6 +4,7 @@ import com.desiato.puresynth.BaseTest;
 import com.desiato.puresynth.models.User;
 import com.desiato.puresynth.services.AuthenticationService;
 import com.desiato.puresynth.services.UserService;
+import com.jayway.jsonpath.JsonPath;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,16 +27,6 @@ public class LoginControllerTest extends BaseTest {
     private PasswordEncoder passwordEncoder;
 
     private static final Logger logger = LoggerFactory.getLogger(LoginControllerTest.class);
-
-
-    @Test
-    public void manuallyCreateAndPersistUser() {
-        User user = new User();
-        user.setEmail("example@example.com");
-        user.setPassword(passwordEncoder.encode("password123"));
-
-        userRepository.save(user);
-    }
 
     @Test
     public void authenticateUser_WhenPasswordIsInvalid_ShouldReturnUnauthorized() throws Exception {
@@ -63,37 +54,29 @@ public class LoginControllerTest extends BaseTest {
         String uniqueEmail = generateUniqueEmail();
         String password = "password123";
 
+        userService.createUser(uniqueEmail, passwordEncoder.encode(password));
         logger.info("Created user with email: {}", uniqueEmail);
 
-        userService.createUser(uniqueEmail, passwordEncoder.encode(password));
-
         String loginJson = String.format("""
-                {
-                    "email": "%s",
-                    "password": "%s"
-                }
-                """, uniqueEmail, password);
+            {
+                "email": "%s",
+                "password": "%s"
+            }
+            """, uniqueEmail, password);
 
         logger.info("Sending login request with email: {}", uniqueEmail);
-
         MvcResult loginResult = mockMvc.perform(post("/api/login")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(loginJson))
                 .andExpect(status().isOk())
-                .andExpect(header().exists("Auth-Token"))
+                .andExpect(jsonPath("$.Auth-Token").exists()) // Validate token presence in response
                 .andReturn();
 
         logger.info("Login response status code: {}", loginResult.getResponse().getStatus());
 
-        String token = loginResult.getResponse().getHeader("Auth-Token");
-
+        String token = JsonPath.parse(loginResult.getResponse().getContentAsString()).read("$.Auth-Token", String.class);
         assertNotNull(token, "Authentication token is missing or invalid");
-
         logger.info("Retrieved token: {}", token);
-
-        mockMvc.perform(get("/api/user/hello")
-                        .header("Auth-Token", token))
-                .andExpect(status().isOk());
     }
 
     @Test
@@ -103,26 +86,26 @@ public class LoginControllerTest extends BaseTest {
         String password = "password123";
         userService.createUser(uniqueEmail, passwordEncoder.encode(password));
 
-        String loginJson = """
-                {
-                    "email": "%s",
-                    "password": "%s"
-                }
-                """.formatted(uniqueEmail, password);
+        String loginJson = String.format("""
+            {
+                "email": "%s",
+                "password": "%s"
+            }
+            """, uniqueEmail, password);
 
         MvcResult loginResult = mockMvc.perform(post("/api/login")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(loginJson))
                 .andExpect(status().isOk())
-                .andExpect(header().exists("Auth-Token"))
+                .andExpect(jsonPath("$.Auth-Token").exists())
                 .andReturn();
 
-        String token = loginResult.getResponse().getHeader("Auth-Token");
+        String token = JsonPath.parse(loginResult.getResponse().getContentAsString()).read("$.Auth-Token", String.class);
 
         // Step 2: Access a protected endpoint using the valid token
-        mockMvc.perform(get("/api/protected")
+        mockMvc.perform(get("/api/hello")
                         .header("Auth-Token", token))
-                .andExpect(status().isOk());  // Access is granted
+                .andExpect(status().isOk());
     }
 
     @Test
